@@ -1,449 +1,430 @@
-****# Game Ném Phi Tiêu - Server Backend Implementation
+# 🎯 Game Ném Phi Tiêu (Dart Game) - Multiplayer Online Game
 
-## Tổng quan dự án
+<div align="center">
 
-Dự án game ném phi tiêu đa người chơi với kiến trúc client-server. Server đóng vai trò trung tâm quản lý toàn bộ logic game, dữ liệu người chơi, và điều phối các trận đấu giữa các client.
+![Java](https://img.shields.io/badge/Java-21-orange?style=for-the-badge&logo=java)
+![JavaFX](https://img.shields.io/badge/JavaFX-21-blue?style=for-the-badge&logo=java)
+![MySQL](https://img.shields.io/badge/MySQL-8.0-blue?style=for-the-badge&logo=mysql)
+![Maven](https://img.shields.io/badge/Maven-3.9-red?style=for-the-badge&logo=apache-maven)
 
-### Phân công vai trò:
-- **A (Bách):** Core game logic, luật chơi, công thức tính toán
-- **B (Dũng):** Server backend, network, database, protocol handling
-- **C (Châu):** Client UI, network client-side
-- **D (Anh):** Phụ trợ UI, leaderboard, polish
+**Game ném phi tiêu đa người chơi real-time với kiến trúc client-server**
 
-## Checklist công việc Server Backend (Vai trò B)
+[📖 Hướng dẫn Server](server.md) • [🎮 Luật chơi chi tiết](game.md) • [🚀 Quick Start](#-quick-start)
 
-### ✅ Socket Server Implementation
-- [x] Tạo `ServerMain.java` - điểm khởi động server
-- [x] Tạo `GameServer.java` - quản lý ServerSocket
-- [x] Tạo `ClientHandler.java` - xử lý từng client (thread)
-- [x] Cấu hình port từ `Config.java`
-
-### ❌ Multi-threading Client Handling  
-- [x] ClientHandler implements Runnable
-- [ ] Quản lý danh sách client online (ConcurrentHashMap)
-- [ ] Xử lý client disconnect đột ngột
-- [ ] Thread pool management (tùy chọn)
-
-### ❌ Database Integration
-- [ ] Tạo database schema (users, matches tables)
-- [ ] Implement `Database.java` - connection management
-- [ ] Implement `UserDAO.java` - user CRUD operations
-- [ ] Implement `MatchDAO.java` - match history storage
-- [ ] Thêm MySQL dependency vào pom.xml
-
-### ❌ Network Protocol Implementation
-- [ ] Xử lý LoginRequest/LoginResponse
-- [ ] Xử lý PlayerListRequest/Response
-- [ ] Xử lý InviteRequest/Response
-- [ ] Xử lý MoveRequest/MoveResult
-- [ ] Xử lý GameStateUpdate, GameStart, GameEnd
-- [ ] Error handling cho tất cả message types
-
-### ❌ Connection Management
-- [ ] ClientManager - quản lý client online
-- [ ] Game session management
-- [ ] Player status tracking (FREE/BUSY/IN_GAME)
-- [ ] Broadcast mechanism cho multiple clients
-- [ ] Graceful shutdown và resource cleanup
-
-## Hướng dẫn chi tiết từng bước
+</div>
 
 ---
 
-## 1. Chi tiết bước 1: Tạo socket server
+## 🎮 Giới thiệu Game
 
-### a. Cấu trúc thư mục đề xuất
+**Game Ném Phi Tiêu** là một trò chơi multiplayer online cho phép 2 người chơi đấu với nhau trong thời gian thực. Game sử dụng kiến trúc client-server với Java Socket Programming, đảm bảo tính công bằng và đồng bộ hóa dữ liệu.
 
+### ✨ Tính năng nổi bật:
+- 🎯 **Real-time multiplayer**: Đấu 1v1 trực tiếp
+- 🧮 **Công thức vật lý**: Hệ thống tính toán vị trí dựa trên công thức toán học
+- 🎲 **Hệ thống Power-up**: 6 loại phụ trợ độc đáo ảnh hưởng gameplay
+- 🏆 **ELO Rating System**: Xếp hạng competitive với điểm ELO
+- 📊 **Leaderboard**: Bảng xếp hạng toàn server
+- 💾 **Database Integration**: Lưu trữ thông tin người chơi và lịch sử trận đấu
+
+### 🎯 Cách chơi cơ bản:
+1. **Đăng nhập** vào tài khoản
+2. **Xem danh sách** người chơi online
+3. **Mời đấu** hoặc **chấp nhận lời mời** từ người khác
+4. **Ném phi tiêu** vào bảng màu để ghi điểm (mục tiêu: 16 điểm)
+5. **Sử dụng power-up** để tăng lợi thế
+6. **Thắng** để nhận +101 ELO, **thua** sẽ -36 ELO
+
+---
+
+## 🏗️ Kiến trúc hệ thống
+
+### 📊 Sơ đồ tổng quan:
 ```
-server/
-├── ServerMain.java        // Điểm khởi động server
-├── GameServer.java        // Quản lý ServerSocket, nhận kết nối client
-├── ClientHandler.java     // Xử lý từng client riêng biệt (thread)
-├── core/                  // Logic game (GameEngine, GameSession...)
-├── protocol/              // Định nghĩa message giao tiếp
-└── db/                    // Kết nối và thao tác database
+┌─────────────────┐    Socket Connection    ┌─────────────────┐
+│   Client (UI)   │ ◄──────────────────────► │   Game Server   │
+│   - JavaFX      │                          │   - Multi-thread│
+│   - Game Logic  │                          │   - Game Logic  │
+│   - Network     │                          │   - Protocol    │
+└─────────────────┘                          └─────────────────┘
+                                                        │
+                                                        ▼
+                                             ┌─────────────────┐
+                                             │  MySQL Database │
+                                             │  - Users        │
+                                             │  - Matches      │
+                                             │  - ELO System   │
+                                             └─────────────────┘
 ```
 
-### b. Các class cần tạo và chức năng
+### 🎯 Core Game Mechanics:
 
-#### 1. `ServerMain.java`
-- **Tác dụng:** Điểm khởi động server, gọi hàm khởi tạo và chạy server.
-- **Function chính:**
-  - `main(String[] args)`: Tạo đối tượng `GameServer` và gọi `start()`.
-- **Ví dụ:**
-  ```java
-  public class ServerMain {
-      public static void main(String[] args) {
-          GameServer server = new GameServer(12345); // PORT
-          server.start();
-      }
-  }
-  ```
+#### 📐 Công thức tính toán vị trí:
+```
+Xfinal = X + f
+Yfinal = Y + sign(X) × floor(f/2)
 
-#### 2. `GameServer.java`
-- **Tác dụng:** Quản lý ServerSocket, lắng nghe kết nối mới, tạo thread cho mỗi client.
-- **Function chính:**
-  - `start()`: Khởi tạo `ServerSocket`, vòng lặp nhận client mới, tạo `ClientHandler` cho mỗi client.
-  - `stop()`: Đóng server khi cần.
-- **Ví dụ:**
-  ```java
-  public class GameServer {
-      private int port;
-      private ServerSocket serverSocket;
-      public GameServer(int port) { this.port = port; }
-      public void start() {
-          try {
-              serverSocket = new ServerSocket(port);
-              while (true) {
-                  Socket clientSocket = serverSocket.accept();
-                  new Thread(new ClientHandler(clientSocket)).start();
-              }
-          } catch (IOException e) { e.printStackTrace(); }
-      }
-      public void stop() throws IOException { serverSocket.close(); }
-  }
-  ```
+Trong đó:
+- X, Y: Tọa độ người chơi nhập
+- f: Lực đẩy ngẫu nhiên (-3 đến +3)  
+- sign(X) = -1 nếu X < 0, +1 nếu X ≥ 0
+```
 
-#### 3. `ClientHandler.java`
-- **Tác dụng:** Xử lý giao tiếp với từng client (đọc/gửi dữ liệu, xử lý logic từng người chơi).
-- **Function chính:**
-  - `run()`: Đọc/gửi message với client, xử lý logic tương tác.
-  - Có thể bổ sung các hàm như `handleLogin()`, `handleMove()`, ...
-- **Ví dụ:**
-  ```java
-  public class ClientHandler implements Runnable {
-      private Socket socket;
-      public ClientHandler(Socket socket) { this.socket = socket; }
-      public void run() {
-          try {
-              ObjectInputStream in = new ObjectInputStream(socket.getInputStream());
-              ObjectOutputStream out = new ObjectOutputStream(socket.getOutputStream());
-              // Vòng lặp nhận và xử lý message
-              while (true) {
-                  Object msg = in.readObject();
-                  // Xử lý message
-              }
-          } catch (Exception e) { e.printStackTrace(); }
-      }
-  }
-  ```
+#### 🎨 Bảng điểm màu (tạo hình chữ thập):
+```
+      Xanh (2 điểm)
+         │
+Tím ──── Đỏ ──── Vàng  
+(4 điểm) (5 điểm) (3 điểm)
+         │
+      Trắng (1 điểm)
+      
+Tọa độ mặc định:
+- Trắng: (0, 1)   - Xanh: (0, -1)  - Đỏ: (0, 0)
+- Vàng: (1, 0)    - Tím: (-1, 0)   - Ngoài: 0 điểm
+```
 
-### c. Ý nghĩa từng thành phần
-- **ServerMain:** Đơn giản hóa việc khởi động server, tách biệt với logic xử lý.
-- **GameServer:** Chịu trách nhiệm quản lý socket, đảm bảo server luôn sẵn sàng nhận client mới.
-- **ClientHandler:** Đảm bảo mỗi client được xử lý độc lập, không ảnh hưởng tới các client khác.
+#### 🎲 6 Loại Power-up:
+1. **Nhân đôi điểm** - x2 điểm lượt này
+2. **Trừ nửa điểm đối thủ** - Giảm 50% điểm lượt tiếp theo của đối thủ
+3. **Hiện 3/5 vùng màu** - Reveal vị trí một số màu
+4. **Đổi 2 vùng màu** - Hoán đổi vị trí 2 màu ngẫu nhiên
+5. **Ném thêm 1 lần** - Bonus turn
+6. **Lực đẩy = 0** - Loại bỏ yếu tố ngẫu nhiên
 
 ---
 
-## 2. Multi-threading Client Handling
+## 📁 Cấu trúc dự án
 
-**Mục tiêu:** Mỗi client được xử lý ở một thread riêng biệt để server phục vụ đồng thời nhiều người chơi.
+### 🗂️ Cây thư mục hiện tại:
+```
+BTL_LTM_N14/
+├── 📄 README.md                    # File này - Giới thiệu tổng quan
+├── 📄 server.md                    # Hướng dẫn phát triển server chi tiết  
+├── 📄 game.md                      # Luật chơi và nghiệp vụ game
+├── 📄 pom.xml                      # Maven configuration
+├── 📄 .env                         # Environment configuration (cần tạo)
+├── 🐳 docker-compose.yml           # Docker setup
+├── 🗄️ sql/                         # Database scripts
+│
+├── 📦 src/main/java/com/oop/game/
+│   ├── 🖥️ HelloApplication.java    # JavaFX Client entry point
+│   ├── 🎮 HelloController.java     # JavaFX Controller
+│   │
+│   └── 🖧 server/                  # Server-side code
+│       ├── 🚀 ServerMain.java      # Server entry point
+│       ├── 🔧 GameServer.java      # Socket server management
+│       ├── 👤 ClientHandler.java   # Per-client thread handler
+│       ├── ⚙️ Config.java          # Configuration management
+│       │
+│       ├── 🎯 core/                # Game logic & engine
+│       │   ├── GameEngine.java     # Core game calculations
+│       │   ├── GameSession.java    # Match management
+│       │   ├── Player.java         # Player data model
+│       │   └── ColorBoard.java     # Game board logic
+│       │
+│       ├── 📡 protocol/            # Client-Server communication
+│       │   ├── Message.java        # Base message class
+│       │   ├── LoginRequest.java   # Login message
+│       │   ├── MoveRequest.java    # Move message
+│       │   ├── InviteRequest.java  # Invite message
+│       │   └── ... (other messages)
+│       │
+│       ├── 🗄️ db/                  # Database layer
+│       │   ├── DAO.java            # Database connection
+│       │   ├── UserDAO.java        # User operations
+│       │   └── MatchDAO.java       # Match operations
+│       │
+│       ├── 📊 managers/            # System managers
+│       │   └── ClientManager.java  # Online client management
+│       │
+│       ├── 🔢 enums/               # Enumerations
+│       │   ├── Color.java          # Board colors
+│       │   ├── PowerUp.java        # Power-up types
+│       │   ├── MessageType.java    # Message types
+│       │   └── PlayerStatus.java   # Player states
+│       │
+│       └── 📝 models/              # Data models
+│           ├── User.java           # User model
+│           └── Match.java          # Match model
+│
+└── 📦 src/test/java/               # Unit tests
+    └── com/oop/game/testing/
+        ├── GameEngineTest.java
+        ├── ColorBoardTest.java
+        └── IntegrationTest.java
+```
 
-**Các bước:**
-1. Tạo class `ClientHandler` implements `Runnable`:
-   ```java
-   public class ClientHandler implements Runnable {
-       private Socket socket;
-       public ClientHandler(Socket socket) { this.socket = socket; }
-       public void run() {
-           // Đọc/ghi dữ liệu với client
-       }
-   }
-   ```
-2. Khi có client mới:
-   ```java
-   Socket clientSocket = serverSocket.accept();
-   new Thread(new ClientHandler(clientSocket)).start();
-   ```
+### 👥 Phân công vai trò team:
 
-**Ý nghĩa:** Đảm bảo server không bị block khi nhiều client cùng kết nối/chơi.
+| Vai trò | Thành viên | Nhiệm vụ chính |
+|---------|------------|----------------|
+| **🎯 A (Lead)** | Trịnh Lê Xuân Bách | Core game logic, luật chơi, công thức tính toán, GameEngine |
+| **🖧 B (Backend)** | Lường Tiến Dũng | Server backend, network, database, protocol handling |
+| **🖥️ C (Frontend)** | Lê Minh Châu | Client UI, network client-side, JavaFX interface |
+| **🎨 D (UI/UX)** | Nguyễn Tuấn Anh | Power-up UI, leaderboard, polish, effects |
 
 ---
 
-## 3. Database Integration
+## 🚀 Quick Start
 
-**Mục tiêu:** Lưu thông tin user, elo, lịch sử trận đấu vào database MySQL.
+### 📋 Yêu cầu hệ thống:
+- ☕ **Java 21** hoặc cao hơn
+- 🗄️ **MySQL 8.0+** 
+- 🔧 **Maven 3.6+**
+- 💾 **RAM**: Tối thiểu 2GB
+- 🌐 **Port**: 8888 (có thể thay đổi trong `.env`)
 
-### a. Tạo database schema
+### ⚡ Cài đặt nhanh:
+
+#### 1️⃣ Clone repository:
+```bash
+git clone <repository-url>
+cd BTL_LTM_N14
+```
+
+#### 2️⃣ Tạo file cấu hình:
+```bash
+# Tạo file .env
+touch .env
+
+# Thêm nội dung vào .env:
+echo "PORT=8888
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=game_db
+DB_USER=root
+DB_PASSWORD=your_mysql_password" > .env
+```
+
+#### 3️⃣ Setup Database:
+```bash
+# Khởi động MySQL
+sudo systemctl start mysql
+
+# Tạo database
+mysql -u root -p -e "CREATE DATABASE game_db;"
+
+# Import schema (nếu có)
+mysql -u root -p game_db < sql/init.sql
+```
+
+#### 4️⃣ Build & Run:
+```bash
+# Compile project
+mvn clean compile
+
+# Run server
+java -cp target/classes com.oop.game.server.ServerMain
+
+# Hoặc run client (terminal khác)
+mvn clean javafx:run
+```
+
+### 🔧 Development Setup:
+
+#### Chạy với Docker:
+```bash
+# Start MySQL với Docker
+docker-compose -f docker-compose.mysql.yml up -d
+
+# Build và run application
+docker-compose up --build
+```
+
+#### Debug mode:
+```bash
+# Run server với debug
+java -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
+     -cp target/classes com.oop.game.server.ServerMain
+```
+
+---
+
+## 🎮 Luật chơi chi tiết
+
+### 🎯 Mục tiêu game:
+- **Điều kiện thắng**: Đầu tiên đạt **16 điểm**
+- **ELO System**: Thắng +101, Thua -36, Rời game -51 (cho người còn lại +51)
+- **Unlock công thức**: Đạt 1036 ELO sẽ được tiết lộ công thức tính toán
+
+### 🎲 Gameplay flow:
+1. **Login** → Xem danh sách online → **Mời đấu** → Chấp nhận/Từ chối
+2. **Bắt đầu game**: Người mời được ném trước, sau đó luân phiên
+3. **Mỗi lượt**: Có 15s để nhập tọa độ (X,Y), quá thời gian sẽ random
+4. **Ném phi tiêu**: Server random lực đẩy f (-3 đến +3) → Tính vị trí cuối
+5. **Ghi điểm**: Dựa trên màu trúng → Có thể đổi màu với màu khác
+6. **Power-up**: Sử dụng 3 phụ trợ được random từ 6 loại
+7. **Kết thúc**: Ai đạt 16 điểm trước thắng
+
+### 🎨 Cơ chế đổi màu:
+- Sau khi ném trúng màu nào, người chơi có thể **đổi vị trí màu đó với màu khác**
+- Đối thủ phải **đoán màu nào bị đổi** dựa trên điểm số nhận được
+
+### ⏰ Timing:
+- **15 giây** để nhập tọa độ mỗi lượt
+- **Timeout**: Auto random tọa độ nếu không nhập kịp
+- **Real-time**: Đồng bộ trạng thái game giữa 2 players
+
+---
+
+## 🛠️ Tech Stack & Dependencies
+
+### 🔧 Technologies:
+- **Backend**: Java 21, Socket Programming, Multi-threading
+- **Frontend**: JavaFX 21, FXML
+- **Database**: MySQL 8.0, JDBC
+- **Build Tool**: Maven 3.9
+- **Containerization**: Docker & Docker Compose
+
+### 📦 Key Dependencies (pom.xml):
+```xml
+<dependencies>
+    <!-- JavaFX -->
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>21</version>
+    </dependency>
+    
+    <!-- MySQL Connector -->
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.3.0</version>
+    </dependency>
+    
+    <!-- JUnit Testing -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+```
+
+---
+
+## 📊 Database Schema
+
+### 👤 Users Table:
 ```sql
--- File: /sql/create_database.sql
-CREATE DATABASE dart_game;
-USE dart_game;
-
 CREATE TABLE users (
-    id INT PRIMARY KEY AUTO_INCREMENT,
+    id INT AUTO_INCREMENT PRIMARY KEY,
     username VARCHAR(50) UNIQUE NOT NULL,
     password VARCHAR(255) NOT NULL,
-    elo INT DEFAULT 1000,
+    email VARCHAR(100),
+    total_matches INT DEFAULT 0,
     total_wins INT DEFAULT 0,
     total_losses INT DEFAULT 0,
+    elo INT DEFAULT 1000,
     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
 );
+```
 
+### 🏆 Matches Table:
+```sql
 CREATE TABLE matches (
-    id INT PRIMARY KEY AUTO_INCREMENT,
-    player1_username VARCHAR(50),
-    player2_username VARCHAR(50),
-    winner_username VARCHAR(50),
-    player1_score INT,
-    player2_score INT,
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    player1_id INT NOT NULL,
+    player2_id INT NOT NULL,
+    winner_id INT,
+    player1_score INT DEFAULT 0,
+    player2_score INT DEFAULT 0,
+    game_duration INT,
     elo_change INT,
-    played_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-    FOREIGN KEY (player1_username) REFERENCES users(username),
-    FOREIGN KEY (player2_username) REFERENCES users(username)
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
+    FOREIGN KEY (player1_id) REFERENCES users(id),
+    FOREIGN KEY (player2_id) REFERENCES users(id),
+    FOREIGN KEY (winner_id) REFERENCES users(id)
 );
 ```
 
-### b. Thêm dependency vào pom.xml
-```xml
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.33</version>
-</dependency>
-```
-
-### c. Implement Database classes
-```java
-// Database.java
-public class Database {
-    private static final String URL = "jdbc:mysql://localhost:3306/dart_game";
-    private static final String USER = "root";
-    private static final String PASS = "password";
-    
-    public static Connection getConnection() throws SQLException {
-        return DriverManager.getConnection(URL, USER, PASS);
-    }
-}
-
-// UserDAO.java
-public class UserDAO {
-    public boolean authenticateUser(String username, String password) {
-        // Kiểm tra username/password trong database
-    }
-    
-    public PlayerInfo getUserInfo(String username) {
-        // Lấy thông tin user (elo, wins, losses)
-    }
-    
-    public void updateElo(String username, int newElo) {
-        // Cập nhật elo sau trận đấu
-    }
-}
-```
-
-**Ý nghĩa:** Lưu trữ bền vững thông tin người chơi, kết quả trận đấu, hỗ trợ leaderboard.
-
 ---
 
-## 4. Network Protocol Implementation
+## 🔧 Troubleshooting
 
-**Mục tiêu:** Xử lý các message protocol đã được định nghĩa trong `/protocol` package.
+### ❌ Common Issues:
 
-### a. Cấu trúc message handling trong ClientHandler
-```java
-private void handleMessage(Object obj, ObjectOutputStream output) throws IOException {
-    if (obj instanceof LoginRequest) {
-        handleLogin((LoginRequest) obj, output);
-    } else if (obj instanceof PlayerListRequest) {
-        handlePlayerListRequest(output);
-    } else if (obj instanceof InviteRequest) {
-        handleInviteRequest((InviteRequest) obj, output);
-    } else if (obj instanceof MoveRequest) {
-        handleMoveRequest((MoveRequest) obj, output);
-    }
-    // ... các message type khác
-}
-```
-
-### b. Implement từng handler method
-```java
-private void handleLogin(LoginRequest req, ObjectOutputStream output) throws IOException {
-    // 1. Kiểm tra username/password qua UserDAO
-    UserDAO userDAO = new UserDAO();
-    boolean isValid = userDAO.authenticateUser(req.getUsername(), req.getPassword());
-    
-    if (isValid) {
-        // 2. Lưu username, thêm vào danh sách online
-        this.username = req.getUsername();
-        ClientManager.addClient(username, this);
-        
-        // 3. Lấy thông tin player và gửi response
-        PlayerInfo playerInfo = userDAO.getUserInfo(username);
-        output.writeObject(new LoginResponse("server", true, null, playerInfo));
-    } else {
-        output.writeObject(new LoginResponse("server", false, "Invalid credentials", null));
-    }
-}
-
-private void handleMoveRequest(MoveRequest req, ObjectOutputStream output) throws IOException {
-    // 1. Lấy GameSession hiện tại
-    GameSession session = ClientManager.getGameSession(username);
-    
-    // 2. Gọi core logic (phần A) để xử lý move
-    MoveResult result = session.processMove(req.getPlayerX(), req.getPlayerY(), req.getUsedPowerUp());
-    
-    // 3. Gửi kết quả về client và update game state
-    output.writeObject(result);
-    broadcastGameState(session);
-}
-```
-
-### c. Error handling cho message processing
-```java
-try {
-    Object obj = input.readObject();
-    handleMessage(obj, output);
-} catch (ClassNotFoundException e) {
-    output.writeObject(new ErrorMessage("server", "Unknown message type"));
-} catch (Exception e) {
-    output.writeObject(new ErrorMessage("server", "Server error: " + e.getMessage()));
-}
-```
-
-**Ý nghĩa:** Đảm bảo client và server giao tiếp đúng protocol, xử lý lỗi gracefully.
-
----
-
-## 5. Connection Management
-
-**Mục tiêu:** Quản lý danh sách client online, game sessions, trạng thái player, broadcast mechanism.
-
-### a. Tạo ClientManager
-```java
-public class ClientManager {
-    private static Map<String, ClientHandler> onlineClients = new ConcurrentHashMap<>();
-    private static Map<String, GameSession> activeSessions = new ConcurrentHashMap<>();
-    
-    // Client management
-    public static void addClient(String username, ClientHandler handler) {
-        onlineClients.put(username, handler);
-        broadcastPlayerListUpdate();
-    }
-    
-    public static void removeClient(String username) {
-        onlineClients.remove(username);
-        broadcastPlayerListUpdate();
-    }
-    
-    public static List<PlayerInfo> getOnlinePlayersList() {
-        // Trả về danh sách player online với status
-    }
-    
-    // Game session management  
-    public static void createGameSession(String player1, String player2) {
-        String sessionId = player1 + "_vs_" + player2;
-        GameSession session = new GameSession(player1, player2);
-        activeSessions.put(sessionId, session);
-    }
-    
-    public static GameSession getGameSession(String username) {
-        // Tìm session mà player đang tham gia
-    }
-    
-    // Broadcast methods
-    public static void broadcastPlayerListUpdate() {
-        PlayerListResponse response = new PlayerListResponse(getOnlinePlayersList());
-        for (ClientHandler handler : onlineClients.values()) {
-            handler.sendMessage(response);
-        }
-    }
-}
-```
-
-### b. Player status tracking
-```java
-public enum PlayerStatus {
-    FREE,       // Rảnh rỗi, có thể nhận lời mời
-    BUSY,       // Đang trong menu, không nhận lời mời
-    IN_GAME,    // Đang chơi game
-    OFFLINE     // Đã disconnect
-}
-
-// Trong ClientHandler
-private PlayerStatus status = PlayerStatus.FREE;
-```
-
-### c. Graceful cleanup
-```java
-// Trong ClientHandler.run()
-finally {
-    cleanup();
-}
-
-private void cleanup() {
-    try {
-        if (username != null) {
-            // Remove từ online list
-            ClientManager.removeClient(username);
-            
-            // Nếu đang trong game, thông báo opponent
-            GameSession session = ClientManager.getGameSession(username);
-            if (session != null) {
-                session.playerLeft(username);
-            }
-        }
-        
-        // Đóng resources
-        if (input != null) input.close();
-        if (output != null) output.close();
-        if (socket != null) socket.close();
-    } catch (IOException ignored) {}
-}
-```
-
-**Ý nghĩa:** Đảm bảo server luôn biết trạng thái chính xác của tất cả client, quản lý game sessions hiệu quả.
-
----
-
-## Thứ tự triển khai đề xuất
-
-### Phase 1: Foundation (Tuần 1)
-1. **Database Integration** - Tạo schema, DAO classes
-2. **Protocol Implementation** - Xử lý message cơ bản (login, player list)
-3. **Connection Management** - ClientManager, basic online list
-
-### Phase 2: Game Features (Tuần 2)  
-1. **Invite System** - Xử lý invite/accept/reject
-2. **Game Session Management** - Tạo/quản lý trận đấu
-3. **Core Logic Integration** - Kết nối với phần A (GameEngine, GameSession)
-
-### Phase 3: Advanced Features (Tuần 3)
-1. **Realtime Game State** - Đồng bộ game state giữa 2 client
-2. **Match History** - Lưu kết quả, cập nhật ELO
-3. **Error Handling** - Xử lý edge cases, disconnect handling
-
-### Phase 4: Testing & Polish (Tuần 4)
-1. **Integration Testing** - Test với multiple clients
-2. **Performance Optimization** - Thread pool, connection pooling
-3. **Documentation** - Code comments, API docs
-
----
-
-## Tài liệu tham khảo
-- [Java Socket Programming](https://docs.oracle.com/javase/tutorial/networking/sockets/)
-- [JDBC Tutorial](https://docs.oracle.com/javase/tutorial/jdbc/)
-- [Java Concurrency](https://docs.oracle.com/javase/tutorial/essential/concurrency/)
-- [MySQL Documentation](https://dev.mysql.com/doc/)
-
----
-
-## Lưu ý quan trọng
-- **Thread Safety:** Sử dụng ConcurrentHashMap cho shared data structures
-- **Resource Management:** Luôn đóng socket/stream trong finally block
-- **Error Handling:** Catch và log tất cả exceptions, gửi error message về client
-- **Testing:** Test từng feature riêng biệt trước khi integrate
-- **Communication:** Sync thường xuyên với phần A về core logic interface
-
----
-
-## Cách chạy và test
+#### Server không khởi động:
 ```bash
-# Compile và chạy server
-mvn compile
-mvn exec:java -Dexec.mainClass="com.oop.game.server.ServerMain"
+# Check port availability
+netstat -tulpn | grep :8888
 
-# Hoặc dùng script
-chmod +x run.sh
-./run.sh
+# Kill process if needed
+lsof -ti:8888 | xargs kill -9
 ```
+
+#### Database connection failed:
+```bash
+# Check MySQL status
+sudo systemctl status mysql
+
+# Start MySQL
+sudo systemctl start mysql
+
+# Test connection
+mysql -u root -p -e "SHOW DATABASES;"
+```
+
+#### JavaFX runtime issues:
+```bash
+# Run with JavaFX module path
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp target/classes com.oop.game.HelloApplication
+```
+
+---
+
+## 📚 Documentation & Resources
+
+### 📖 Project Documentation:
+- **[server.md](server.md)** - Chi tiết hướng dẫn phát triển server
+- **[game.md](game.md)** - Luật chơi và nghiệp vụ game đầy đủ
+- **Code Comments** - Inline documentation trong source code
+
+### 🔗 External Resources:
+- [Java Socket Programming Guide](https://docs.oracle.com/javase/tutorial/networking/sockets/)
+- [JavaFX Documentation](https://openjfx.io/javadoc/21/)
+- [MySQL Connector/J Guide](https://dev.mysql.com/doc/connector-j/8.0/en/)
+- [Maven Getting Started](https://maven.apache.org/guides/getting-started/)
+
+---
+
+## 🤝 Contributing
+
+### 🔄 Development Workflow:
+1. **Clone** repository và tạo branch mới
+2. **Follow** coding standards và naming conventions
+3. **Test** thoroughly trước khi commit
+4. **Create PR** với description chi tiết
+5. **Code review** và merge vào main branch
+
+### 📝 Coding Standards:
+- **Java Naming**: CamelCase cho classes, camelCase cho methods/variables
+- **Documentation**: Javadoc cho public methods
+- **Error Handling**: Proper try-catch và logging
+- **Thread Safety**: Sử dụng concurrent collections khi cần
+
+---
+
+## 📄 License & Credits
+
+**Dự án BTL Lập Trình Mạng N14**  
+**Trường Đại học Bách Khoa Hà Nội**
+
+### 👨‍💻 Team Members:
+- **Trịnh Lê Xuân Bách** - Team Lead & Core Game Logic
+- **Lường Tiến Dũng** - Backend Development & Database  
+- **Lê Minh Châu** - Frontend Development & UI
+- **Nguyễn Tuấn Anh** - UI/UX & Power-up System
+
+---
+
+<div align="center">
+
+**🎯 Game Ném Phi Tiêu - Where Strategy Meets Skill! 🎯**
+
+*Made with ❤️ by Team N14*
+
+</div>
